--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="footer-links">
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms of Service</a>
-                <a href="#">Risk Disclosures</a>
+                <a href="risks.html">Risk Disclosures</a>
                 <a href="#">Legal</a>
             </div>
             <p style="margin-top: 20px; color: #555; font-size: 0.7rem; max-width: 700px; margin-left: auto; margin-right: auto; line-height: 1.4;">
