--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <p>TorrideX converts decay energy into electricity via controlled plasma and electrostatic acceleration. No turbines. No steam. Pure physics.</p>
             
             <div class="diagram-box">
-                <span class="flow-step">Isotope (Am-241)</span>
+                <span class="flow-step">Isotope</span>
                 <span class="arrow">⟶</span>
                 <span class="flow-step">Gas Ionization</span>
                 <span class="arrow">⟶</span>
