--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="logo" style="margin-bottom: 20px;">TORRIDE<span>X</span></div>
             <p>&copy; 2025 TorrideX Energy Systems. All rights reserved.</p>
             <div class="footer-links">
-                <a href="#">Privacy Policy</a>
+                <a href="privacy.html">Privacy Policy</a>
                 <a href="#">Terms of Service</a>
                 <a href="risks.html">Risk Disclosures</a>
                 <a href="#">Legal</a>
