--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
             <p>&copy; 2025 TorrideX Energy Systems. All rights reserved.</p>
             <div class="footer-links">
                 <a href="privacy.html">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
+                <a href="terms.html">Terms of Service</a>
                 <a href="risks.html">Risk Disclosures</a>
-                <a href="#">Legal</a>
+                <a href="legal.html">Legal</a>
             </div>
             <p style="margin-top: 20px; color: #555; font-size: 0.7rem; max-width: 700px; margin-left: auto; margin-right: auto; line-height: 1.4;">
                 DISCLAIMER: The TorrideX generator is currently under development. All technical specifications presented are based on theoretical models and laboratory prototypes. Investment in DeepTech and nuclear-related technologies involves significant risks, including regulatory hurdles and development delays. This site does not constitute an offer to sell securities.
