--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <h2>Invest in TorrideX</h2>
         <p>Join the revolution in autonomous energy. Request our Pitch Deck.</p>
         
-        <form id="contactForm" action="https://formspree.io/f/ТВОЙ_КОД" method="POST" class="contact-form form-group">
+        <form id="contactForm" action="https://formspree.io/f/xldknzbj" method="POST" class="contact-form form-group">
             
             <input type="text" name="name" placeholder="Full Name / Fund Name" required>
             <input type="email" name="email" placeholder="Corporate Email" required>
